[package]
name = "espeak-web"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/nikarh/espeak-web"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Arhipov <n@arhipov.net>"]

[dependencies]
rouille = "3.6.2"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
